--- a/index.html
+++ b/index.html
@@ -6,6 +6,23 @@
 		<script src="https://use.fontawesome.com/ce5dcdbc7b.js"></script>
 		<link rel="stylesheet" href="style/style.css" />
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/6.0.0/normalize.css" />
+		<link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
+		<link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
+		<link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
+		<link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
+		<link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png">
+		<link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png">
+		<link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
+		<link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
+		<link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
+		<link rel="icon" type="image/png" sizes="192x192"  href="/android-icon-192x192.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+		<link rel="manifest" href="/manifest.json">
+		<meta name="msapplication-TileColor" content="#ffffff">
+		<meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+		<meta name="theme-color" content="#ffffff">
 	</head>
 	<body>
 		<div id="container">
@@ -14,8 +31,8 @@
 					<div class="dropdown"> <!-- Dropdown navigation menu -->
   						<button class="dropbtn"><i class="fa fa-bars fa-lg" aria-hidden="true"></i></button>
   						<div class="dropdown-content">
-    						<a href="#">Training</a>
-   							<a href="#">About</a>
+    						<a href="#about">About Us</a>
+   							<a href="#timetable">Timetable</a>
     						<a href="#">Contact</a>
   						</div>
 					</div> <!-- Right side social buttons -->
@@ -27,19 +44,49 @@
 				</div>
 			</div>
 			<div id="secondlevel">
-			
-				<p class="backgroundCont">
-					<img class="logo" id="beating" src="images/df_logo_grey.png">
-					<img class="background" img src="images/photo_running_bw.jpg">
-				</p>
-				
+				<img class="logo" id="beating" src="images/df_logo_grey.png">
+				<img class="background" img src="images/photo_running_bw2.jpg">	
 			</div>
 			<div id="thirdlevel">
-			
-				<p class="">
 					<div style="position:relative;height:0;padding-bottom:56.25%"><iframe src="https://www.youtube.com/embed/2jkE_BCHyWo?ecver=2" width="640" height="360" frameborder="0" style="position:absolute;width:100%;height:100%;left:0" allowfullscreen></iframe></div>
-				</p>
-				
+			</div>
+			<div id="forthlevelcontainer">
+				<div id="forthlevelleft">
+					<div class="iconbox"><i class="fa fa-users fa-4x" aria-hidden="true"></i>
+					</div>
+					<div class="textpain"><a name="about"></a> 
+					<h2>About Us</h2>
+					<p>Definition will give you the skills and education to make things happen for yourself. Our proactive approach to health and fitness will allow you to take control of your wellbeing. Success is in your hands.</p>
+					</div>
+					<div class="iconbox"><i class="fa fa-laptop fa-4x" aria-hidden="true"></i>
+					</div>
+					<div class="textpain">
+					<h2>Expert Advice</h2>
+					<p>Definition will give you the skills and education to make things happen for yourself. Our proactive approach to health and fitness will allow you to take control of your wellbeing. Success is in your hands.</p>
+					</div>
+					<div class="iconbox"><i class="fa fa-trophy fa-4x" aria-hidden="true"></i></i>
+					</div>
+					<div class="textpain">
+					<h2>Top Results</h2>
+					<p>Definition will give you the skills and education to make things happen for yourself. Our proactive approach to health and fitness will allow you to take control of your wellbeing. Success is in your hands.</p>
+					</div>
+					<div class="iconbox"><i class="fa fa-table fa-4x" aria-hidden="true"></i></i></i>
+					</div>
+					<div class="textpain"><a name="timetable"></a> 
+					<h2>Timetable</h2>
+					<p>Click here to download the latest <a href="http://definitionfitness.com.au/timetable.pdf" target="_new">timetable (pdf)</a></p>
+					</div>
+				</div>
+				<div id="forthlevelright">
+					<iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fdefinitionfitnesswollongong%2F&tabs=timeline&width=340&height=500&small_header=true&adapt_container_width=true&hide_cover=true&show_facepile=true&appId" width="340" height="500" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+				</div>
+			</div>
+			<footer>
+				<div id="bottomcontainer">
+					<h2>Location</h2>
+					<p>All outdoor sessions are at Stuart Park North Wollongong. During wet weather, classes are currently held at "The Definition GYM" 108 Auburn St Wollongong.</p>
+				</div>
+			</footer>
 			</div>
 		</div>
 	</body>
