--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
 					<div id="bottomright">
 						<h2>Location</h2>
 						<p>All outdoor sessions are at Stuart Park North Wollongong. During wet weather, classes are currently held at "The Definition GYM" 108 Auburn St Wollongong.</p>
+						<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1114.1032912094518!2d150.8909840344959!3d-34.43504503183379!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xc0871a2c50458a72!2sDefinition+Fitness+Training!5e0!3m2!1sen!2sau!4v1496126451314" width="340" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
 					</div>
 				</div>
 			</footer>
