Contact Form and Map Fixed
Yay I fixed the problem and can continue making it look pretty.

--- a/index.html
+++ b/index.html
@@ -110,11 +110,11 @@
 					<div id="bottomleft">
 						<h2>Contact Us</h2>
 						<p>All outdoor sessions are at Stuart Park North Wollongong. During wet weather, classes are currently held at "The Definition GYM" 108 Auburn St Wollongong.</p>
-						<main>
-						<!-- <div id="content"> -->
+					<main>
+						<div id="content">
 							<form id="myForm"> <!-- novalidate -->
 							<fieldset>
-								<!-- <legend>Profile</legend> -->
+								<legend>Profile</legend>
 									<label>
 										<span>First name</span>
 										<input type=text placeholder="Add your first name" name="firstname" required><!-- required -->
@@ -127,7 +127,7 @@
 
 							<button type="submit">Submit</button>
 							</form>
-						<!-- </div> -->
+						</div>
 					</main>
 
 					</div>
