--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
 					</div> <!-- Right side social buttons -->
 						<ul class="navicons">      						
 							<li><a href="https://www.facebook.com/definitionfitnesswollongong/" target=_new><i class="fa fa-facebook fa-lg" aria-hidden="true"></i></a></li>
-							<li><a href="#contact"><i class="fa fa-envelope fa-lg" aria-hidden="true"></i></i></a></li>
-							<li><a href="https://www.youtube.com/user/DEFINITIONFITNESS1" target=_new><i class="fa fa-youtube fa-lg" aria-hidden="true"></i></a></li>
+							<li><a href="#contact"><i class="fa fa-envelope fa-lg" aria-hidden="true"></i></a></li>
+							<li><a href="https://www.youtube.com/user/DEFINITIONFITNESS1" target="new"><i class="fa fa-youtube fa-lg" aria-hidden="true"></i></a></li>
 						</ul>
 				</div>
 			</div>
 			<div id="secondlevel">
-				<img class="logo" id="beating" src="images/df_logo_grey.png">
-				<img class="background" img src="images/photo_running_bw2.jpg">	
+				<img class="logo" id="beating" src="images/df_logo_grey.png" alt="Logo">
+				<img class="background" img src="images/photo_running_bw2.jpg" alt="Background image running">	
 			</div>
 			<div id="thirdlevel">
 					<div style="position:relative;height:0;padding-bottom:56.25%"><iframe src="https://www.youtube.com/embed/2jkE_BCHyWo?ecver=2" width="640" height="360" frameborder="0" style="position:absolute;width:100%;height:100%;left:0" allowfullscreen></iframe></div>
@@ -67,23 +67,26 @@
 					</div>
 					<div class="textpain">
 					<h2>Expert Advice</h2>
-					<p>Definition will give you the skills and education to make things happen for yourself. Our proactive approach to health and fitness will allow you to take control of your wellbeing. Success is in your hands.</p>
+					<p>The brand new Definition Gym is a state of the art training facility, dedicated to providing you with the best of everything.</p>  
+
+					<p>Our goal is to provide only the best forms of training, proven to deliver results.</p>
 					</div>
-					<div class="iconbox"><i class="fa fa-trophy fa-4x" aria-hidden="true"></i></i>
+					<div class="iconbox"><i class="fa fa-trophy fa-4x" aria-hidden="true"></i>
 					</div>
 					<div class="textpain">
 					<h2>Top Results</h2>
-					<p>Definition will give you the skills and education to make things happen for yourself. Our proactive approach to health and fitness will allow you to take control of your wellbeing. Success is in your hands.</p>
+					<p>We teach people how to alter average everyday meals into beautiful, healthy and delicious dishes by simply withdrawing processed high sugar content ‘bad foods’ and exchanging them with low GI nutrient rich natural ingredients whilst improving energy levels and still retaining the same great taste.</p>
+</p>
 					</div>
-					<div class="iconbox"><i class="fa fa-table fa-4x" aria-hidden="true"></i></i></i>
+					<div class="iconbox"><i class="fa fa-table fa-4x" aria-hidden="true"></i>
 					</div>
 					<div class="textpain"><a name="timetable"></a> 
 					<h2>Timetable</h2>
-					<p>Click here to download the latest <a href="http://definitionfitness.com.au/timetable.pdf" target="_new">timetable (pdf)</a></p>
+					<p>Click here to download the latest <a href="http://definitionfitness.com.au/timetable.pdf" target="new">timetable (pdf)</a></p>
 					</div>
 				</div>
 				<div id="forthlevelright">
-					<iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fdefinitionfitnesswollongong%2F&tabs=timeline&width=340&height=500&small_header=true&adapt_container_width=true&hide_cover=true&show_facepile=true&appId" width="340" height="450" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+					<iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fdefinitionfitnesswollongong%2F&tabs=timeline&width=340&height=500&small_header=true&adapt_container_width=true&hide_cover=true&show_facepile=true&appId" width="340" height="450" style="border:none;overflow:hidden" scrolling="no" allowTransparency="true"></iframe>
 				</div>
 			</div>
 			
@@ -91,7 +94,7 @@
 				<div id="bottomcontainer">
 					<div id="bottomleft">
 						<h2>Contact Us</h2><a name="contact"></a>
-						<p>All outdoor sessions are at Stuart Park North Wollongong. During wet weather, classes are currently held at "The Definition GYM" 108 Auburn St Wollongong.</p>
+						<p>To make an enquiry, simply fill in the following form and one of the definition team will be in contact soon.</p>
 					<main>
 						<div id="content">
 							<form id="myForm"> <!-- novalidate -->
@@ -143,7 +146,7 @@
 					<div id="bottomright">
 						<h2>Location</h2>
 						<p>All outdoor sessions are at Stuart Park North Wollongong. During wet weather, classes are currently held at "The Definition GYM" 108 Auburn St Wollongong.</p>
-						<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1114.1032912094518!2d150.8909840344959!3d-34.43504503183379!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xc0871a2c50458a72!2sDefinition+Fitness+Training!5e0!3m2!1sen!2sau!4v1496126451314" width="340" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+						<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1114.1032912094518!2d150.8909840344959!3d-34.43504503183379!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xc0871a2c50458a72!2sDefinition+Fitness+Training!5e0!3m2!1sen!2sau!4v1496126451314" width="340" height="300" style="border:0" allowfullscreen></iframe>
 					</div>
 				</div>
 			</footer>
