--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 						<div id="content">
 							<form id="myForm"> <!-- novalidate -->
 							<fieldset>
-								<legend>Profile</legend>
+								<!-- <legend>Profile</legend> -->
 									<label>
 										<span>First name</span>
 										<input type="text" placeholder="Add your first name" name="firstname" required><!-- required -->
